refactor: 불필요한 방어적 복사 제거